Improved inverse loc dump.
We should now avoid dumping the same data several time (in sensors LOS,
datation and rate), and we use linear interpolation on replay between
the dumped LOS, datation and rates.